# learn-rust-demo

./: .gitignore  Cargo.toml  README.md
macro_define_crate/: Cargo.toml
macro_define_crate/src/: lib.rs
src/: closure.rs  customcrateroot.rs  lib.rs  lifecycle.rs  macro.rs  main.rs  mytrait.rs  ownership.rs  smartpointer.rs
src/demod/: demo.rs  mod.rs
src/tests/: demotest.rs  mod.rs
